# Descent2-Mobile

./: .gitignore  COPYING  README.md  build.gradle  settings.gradle
2D/: CANVAS.C  GR.C  GR.H  GRDEF.H  LBITBLT.C  LINE.C  PALETTE.C  RECT.C  RLE.C  VESALIB.C
2D/2D.xcodeproj/: project.pbxproj
2D/OGLES/: BITBLTOGLES.c  FONTOGLES.c  RECTOGLES.c  RECTOGLES.h  SCALEOGLES.c  SCALEOGLES.h
2d/: CMakeLists.txt  bitblt.c  bitmap.c  font.c  gr.c  gr.h  ibitblt.c  ibitblt.h  lbitblt.c  macstubs.c  palette.c  pcx.c  rle.h  scale.c  scanline.c
2d/2d.xcodeproj/: project.pbxproj
2d/ogles/: CMakeLists.txt  bitbltogles.c  bitbltogles.h  fontogles.h  rectogles.c  scaleogles.c
3D/: DRAW.C  INTERP.C  ROD.C  UPVECS.C  UPVECS2.C
3D/OGLES/: RODOGLES.c  RODOGLES.h  SETUPOGLES.c  SETUPOGLES.h
3d/: 3d.h  CMakeLists.txt  draw.c  matrix.c
3d/3d.xcodeproj/: project.pbxproj
3d/ogles/: CMakeLists.txt  drawogles.c  drawogles.h  setupogles.c
CFILE/: CFILE.C  CFILE.H
CFILE/CFILE.xcodeproj/: project.pbxproj
CFILE/CFILE.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Descent2/: AppDelegate.h  AppDelegate.m  ControlsView.h  ControlsView.m  Info.plist  Motion.h  Motion.m  Music.h  Music.m  RenderView.h  RenderView.m  ViewController.h  ViewController.m  ViewControllerC.h  ViewControllerC.m  build.gradle  main.m
Descent2-Mobile.xcworkspace/: contents.xcworkspacedata
Descent2-iOS.xcworkspace/: contents.xcworkspacedata
Descent2/Base.lproj/: LaunchScreen.storyboard  Main-iPad.storyboard  Main.storyboard
Descent2/Descent2.xcodeproj/: project.pbxproj
Descent2/Descent2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Descent2/src/main/: AndroidManifest.xml
Descent2/src/main/cpp/: CMakeLists.txt  controls.c  keyboard.c  main.c  motion.c  mouse.c  render.c
IFF/IFF.xcodeproj/: project.pbxproj
IO/: DPMI.C  ERROR.H  IPX.C  JOY.C  MONO.C  MOUSE.C  TIMER.H
IO/IO.xcodeproj/: project.pbxproj
IO/IO.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
LIBMVE/: MVEPLAY.C
MAIN/: AI.C  AISTRUCT.H  AUTOMAP.C  BM.C  CNTRLCEN.C  CONFIG.C  CREDITS.C  DIGI.C  DIGI.H  ENDLEVEL.C  ENDLEVEL.H  FIREBALL.C  FVI.C  GAME.C  GAMEPAL.C  GAMEREND.C  GAMESAVE.C  GAMESEQ.C  HMP.C  IGLASSES.C  INFERNO.C  LASER.C  MENU.C  MISSION.C  MISSION.H  MOVIE.C  MOVIE.H  MULTIBOT.H  NEWDEMO.C  NEWMENU.C  OBJECT.C  PHYSICS.C  PLAYSAVE.C  POWERUP.C  POWERUP.H  RENDER.C  SETTINGS.H  SONGS.C  TEXMERGE.C  TEXT.C  (+6 more)
MAIN/MAIN.xcodeproj/: project.pbxproj
MEM/: MEM.C
MEM/MEM.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MISC/: ARGS.C  ERROR.C  PARSARG.C  STRUTIL.C
MISC/MISC.xcodeproj/: project.pbxproj
PA_NULL/: POLY_ACC.C
PA_NULL/PA_NULL.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TEXMAP/: NTMAP.C  NTMAPOUT.H
TEXMAP/OGLES/: OGLESTEX.c  OGLESTEX.h
UI/: KEYPAD.C  KEYTRAP.C  NUMBER.C
UI/UI.xcodeproj/: project.pbxproj
VECMAT/VECMAT.xcodeproj/: project.pbxproj
cfile/: cfile.c  cfile.h
cfile/cfile.xcodeproj/: project.pbxproj
fix/: CMakeLists.txt
fix/fix.xcodeproj/: project.pbxproj
iff/: iff.c
iff/iff.xcodeproj/: project.pbxproj
iff/iff.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
io/: CMakeLists.txt  dpmi.c  dpmi.h  ipx.c  key.c  mouse.c  mouse.h
io/io.xcodeproj/: project.pbxproj
libmve/: CMakeLists.txt  decoder16.c  mveplay.c
libmve/libmve.xcodeproj/: project.pbxproj
libmve/libmve.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
main/: CMakeLists.txt  ai.c  ai2.c  aipath.c  automap.c  cdmix32.c  collide.c  config.c  config.h  controls.c  credits.c  digi.h  endlevel.c  escort.c  fireball.c  fuelcen.c  fvi.c  game.c  game.h  gamecntl.c  gamefont.c  gamepal.c  gamepal.h  gamerend.c  gameseg.c  gameseq.c  gamestat.h  gauges.c  gauges.h  hostage.c  hud.c  inferno.h  joydefs.c  kconfig.c  kmatrix.c  laser.c  lighting.c  menu.c  modem.c  morph.c  (+17 more)
main/android/: CMakeLists.txt  digi.c  hmp.c
main/ios/: digi.c  hmp.c
main/main.xcodeproj/: project.pbxproj
main/main.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mem/: mem.c
mem/mem.xcodeproj/: project.pbxproj
misc/: CMakeLists.txt  hash.c  parsarg.c  strutil.h  types.h
misc/misc.xcodeproj/: project.pbxproj
pa_null/: CMakeLists.txt  pstypes.h
pa_null/pa_null.xcodeproj/: project.pbxproj
texmap/: CMakeLists.txt  scanline.c  texmap.h
texmap/ogles/: oglestex.c
texmap/texmap.xcodeproj/: project.pbxproj
ui/: CMakeLists.txt  barbox.c  file.c  func.c  ui.c  window.c
ui/ui.xcodeproj/: project.pbxproj
vecmat/: CMakeLists.txt
vecmat/vecmat.xcodeproj/: project.pbxproj
(+15 files in other folders)
