add_subdirectory(android)

set(SOURCES
    3dfx.c
    ai2.c
    ai.c
    aipath.c
    automap.c
    bm.c
    bmread.c
    cdmix32.c
    cntrlcen.c
    collide.c
    config.c
    controls.c
    credits.c
    crypt.c
    dumpmine.c
    effects.c
    endlevel.c
    escort.c
    fireball.c
    fuelcen.c
    fvi.c
    game.c
    gamecntl.c
    gamefont.c
    gamemine.c
    gamepal.c
    gamerend.c
    gamesave.c
    gameseg.c
    gameseq.c
    gauges.c
    hmp.c
    hostage.c
    hud.c
    iglasses.c
    inferno.c
    joydefs.c
    kconfig.c
    kmatrix.c
    laser.c
    lighting.c
    menu.c
    mglobal.c
    mission.c
    modem.c
    morph.c
    movie.c
    multibot.c
    multi.c
    netmisc.c
    network.c
    newdemo.c
    newmenu.c
    object.c
    paging.c
    physics.c
    piggy.c
    playsave.c
    polyobj.c
    powerup.c
    render.c
    robot.c
    scores.c
    slew.c
    songs.c
    state.c
    switch.c
    terrain.c
    texmerge.c
    text.c
    titles.c
    vclip.c
    vfx.c
    victor.c
    wall.c
    weapon.c
)

add_library(main STATIC ${SOURCES})
